layout bug

--- a/src/css/products.css
+++ b/src/css/products.css
@@ -29,4 +29,58 @@
   #criarAnuncio:hover {
     background: #27ae60;
   }
+
+
+  .products {
+    padding: 20px;
+    background-color: var(--light-color);
+    text-align: center;
+}
+.products h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+}
+.products {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+.product {
+    width: 150px;
+    height: 230px; 
+    background: var(--light-color);
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden; 
+}
+.product-image {
+    width: 100%;             
+    height: 130px;           
+    display: flex;
+    justify-content: center;   
+    align-items: center;      
+    background-color: #fff;   
+}
+
+.product img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+}
+.product button {
+    background: var(--primary-color);
+    color: #fff;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+.product button:hover {
+    background: #1a5a43;
+}
   
