--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -300,11 +300,15 @@ h1 {
     flex-wrap: wrap;
 }
 .product {
-    width: 150px;
+    width: 200px; /* Aumentar um pouco a largura do card */
+    height: auto; /* Altura automática baseada no conteúdo */
     background: var(--light-color);
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .product img {
     width: 110px;
@@ -315,6 +319,8 @@ h1 {
 .product-image{
     width: 110px;
     height: 110px;
+    object-fit: contain !important; 
+    margin-bottom: 10px;
 }
 .product button {
     background: var(--primary-color);
